crates/alder-parse/src/snapshots/alder_parse__exposing__tests__exposing_multiple_operators.snap
---
source: crates/alder-parse/src/exposing.rs
description: "Code:\n\n((+), (-), (++))"
---
Explicit(
    [
        Operator {
            region: Region {
                start: Position {
                    line: 1,
                    column: 2,
                },
                end: Position {
                    line: 1,
                    column: 5,
                },
            },
            op: "+",
        },
        Operator {
            region: Region {
                start: Position {
                    line: 1,
                    column: 7,
                },
                end: Position {
                    line: 1,
                    column: 10,
                },
            },
            op: "-",
        },
        Operator {
            region: Region {
                start: Position {
                    line: 1,
                    column: 12,
                },
                end: Position {
                    line: 1,
                    column: 16,
                },
            },
            op: "++",
        },
    ],
)
