crates/alder-parse/src/snapshots/alder_parse__exposing__tests__exposing_single_value.snap
---
source: crates/alder-parse/src/exposing.rs
description: "Code:\n\n(foo)"
---
Explicit(
    [
        Lower(
            Located {
                region: Region {
                    start: Position {
                        line: 1,
                        column: 2,
                    },
                    end: Position {
                        line: 1,
                        column: 5,
                    },
                },
                value: "foo",
            },
        ),
    ],
)
